@@ -1,0 +1,16 @@
+.. -*- mode: rst -*-
+
+:0:
+   Everything went well.
+
+:1:
+   An unexpected error occured. This may indicate a bug in the
+   program.
+
+:2:
+   Invalid command line argument.
+
+:10:
+   Could not open log file for writing.
+
+   
