@@ -32,6 +32,15 @@ The |command| command accepts the following options:
 .. pipeinclude:: python ../../bin/s3qlstat --help
    :start-after: show this help message and exit
 
+
+Exit Codes
+==========
+
+|command| may terminate with the following exit codes:
+
+.. include:: ../include/exitcodes.rst
+
+
 .. include:: ../include/postman.rst
 
 .. |command| replace:: :program:`s3qlstat`
